# dirigent

./: Cargo.toml  README.md
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
benchmarks/src/instrums/: consumer_all.rs  consumer_slow.rs  mod.rs  spammer.rs
dirigent/: Cargo.toml
dirigent/src/: envelope.rs  index.rs  lib.rs  process.rs  shutdown.rs  spawner.rs  traits.rs  updatable.rs
dirigent/src/tests/: mod.rs
instrum-p2p/: Cargo.toml
instrum-p2p/src/: lib.rs  messages.rs
src/: channel.rs  envelope.rs  index.rs  lib.rs  process.rs  scheduler.rs  shutdown.rs  spawner.rs  traits.rs  updatable.rs
src/tests/: mod.rs
