[package]
name = "dirigent"
authors = ["Frederik Gartenmeister <mustermeiszer@posteo.de>"]
edition = "2021"
repository = "https://github.com/mustermeiszer/dirigent.git"
version = "0.1.0"

[dependencies]
futures = "0.3.28"
dyn-clone = "1.0.11"
pin-project = "1.1.0"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.68"
sync_wrapper = "0.1.2"
flume = "0.10.14"
crossbeam = "0.8.2"