[package]
name = "dirigent-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirigent = { path = "../"}
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.68"
tracing-subscriber = "0.3.17"
futures-timer = "3.0.2"
