[package]
name = "dirigent"
authors = ["Frederik Gartenmeister <mustermeiszer@posteo.de>"]
edition = "2021"
repository = "https://github.com/mustermeiszer/dirigent.git"
version = "0.6.0"

[dependencies]
futures = "0.3.28"
dyn-clone = "1.0.11"
pin-project = "1.1.0"
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.68"
flume = "0.10.14"
crossfire = "1.0.1"
futures-timer = "3.0.2"
tracing = "0.1.37"
thiserror = "1.0.49"

libp2p = { version = "0.51.3", optional = true  }


[dev-dependencies]
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
libp2p = { version = "0.51.3" }

[features]
default = []
p2p = [
    "libp2p"
]
