[package]
name = "instrum-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirigent = { path = "../dirigent", features = ["libp2p"]}
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"
libp2p = { version = "0.52.4", features = [ "tokio", "dns", "kad", "noise", "tcp", "yamux", "rsa"] }
